@@ -295,20 +295,35 @@ DEFINE_GUID(MEDIASUBTYPE_PCM_TWOS,
 DEFINE_GUID(MEDIASUBTYPE_PCM_SOWT,
 			0x74776f73, 0x0000, 0x0010, 0x80, 0x00, 0x00, 0xAA, 0x00, 0x38, 0x9B, 0x71);
 
-// 34326E69-0000-0010-8000-00AA00389B71
+// 34326E69-0000-0010-8000-00AA00389B71 (big-endian int24)
 DEFINE_GUID(MEDIASUBTYPE_PCM_IN24,
 			0x34326E69, 0x0000, 0x0010, 0x80, 0x00, 0x00, 0xAA, 0x00, 0x38, 0x9B, 0x71);
 
-//32336E69-0000-0010-8000-00AA00389B71
+// 32336E69-0000-0010-8000-00AA00389B71 (big-endian int32)
 DEFINE_GUID(MEDIASUBTYPE_PCM_IN32,
 			0x32336E69, 0x0000, 0x0010, 0x80, 0x00, 0x00, 0xAA, 0x00, 0x38, 0x9B, 0x71);
 
-//32336C66-0000-0010-8000-00AA00389B71
+// 32336C66-0000-0010-8000-00AA00389B71 (big-endian float32)
 DEFINE_GUID(MEDIASUBTYPE_PCM_FL32,
 			0x32336C66, 0x0000, 0x0010, 0x80, 0x00, 0x00, 0xAA, 0x00, 0x38, 0x9B, 0x71);
-// 34366C66-0000-0010-8000-00AA00389B71
+
+// 34366C66-0000-0010-8000-00AA00389B71 (big-endian float64)
 DEFINE_GUID(MEDIASUBTYPE_PCM_FL64,
 			0x34366C66, 0x0000, 0x0010, 0x80, 0x00, 0x00, 0xAA, 0x00, 0x38, 0x9B, 0x71);
+
+// Reverse GUIDs for little-endian 'in24', 'in32', 'fl32', 'fl64'
+// 696E3234-0000-0010-8000-00AA00389B71 (little-endian int24, reverse 'in24')
+DEFINE_GUID(MEDIASUBTYPE_PCM_IN24_le,
+			0x696E3234, 0x0000, 0x0010, 0x80, 0x00, 0x00, 0xAA, 0x00, 0x38, 0x9B, 0x71);
+// 696E3332-0000-0010-8000-00AA00389B71 (little-endian int32, reverse 'in32')
+DEFINE_GUID(MEDIASUBTYPE_PCM_IN32_le,
+			0x696E3332, 0x0000, 0x0010, 0x80, 0x00, 0x00, 0xAA, 0x00, 0x38, 0x9B, 0x71);
+// 666C3332-0000-0010-8000-00AA00389B71 (little-endian float32, reverse 'fl32')
+DEFINE_GUID(MEDIASUBTYPE_PCM_FL32_le,
+			0x666C3332, 0x0000, 0x0010, 0x80, 0x00, 0x00, 0xAA, 0x00, 0x38, 0x9B, 0x71);
+// 666C3634-0000-0010-8000-00AA00389B71 (little-endian float64, reverse 'fl64')
+DEFINE_GUID(MEDIASUBTYPE_PCM_FL64_le,
+			0x666C3634, 0x0000, 0x0010, 0x80, 0x00, 0x00, 0xAA, 0x00, 0x38, 0x9B, 0x71);
 
 enum
 {
